--- a/.github/workflows/action1.yml
+++ b/.github/workflows/action1.yml
@@ -10,7 +10,10 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+  
+concurrency:
+  this_is_concurrency_workflow
+  
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
