--- a/.github/workflows/action1.yml
+++ b/.github/workflows/action1.yml
@@ -7,7 +7,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
   pull_request:
-
+    types: [opened, synchronize, reopened, closed]
+    
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   
