--- a/.github/workflows/action1.yml
+++ b/.github/workflows/action1.yml
@@ -1,6 +1,7 @@
 # This is a basic workflow to help you get started with Actions
 
 name: CI
+concurrency: ci-${{ github.sha }}
 
 # Controls when the workflow will run
 on:
@@ -11,8 +12,6 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   
-concurrency:
-  this_is_concurrency_workflow
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
