--- a/.github/workflows/actions2.yml
+++ b/.github/workflows/actions2.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI2
 concurrency: ci-${{ github.sha }}
 
 # Controls when the workflow will run
@@ -8,7 +8,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   pull_request:
     types: [closed]
-    
+  
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   
