--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ name: deploy
 concurrency: ci-${{ github.sha }}
 
 on:
-  deployment:
+  deployment
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
