--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,19 +18,10 @@ jobs:
 
     steps:
 
-    - name: start deployment
-      uses: bobheadxi/deployments@v0.6.0
-      id: deployment
-      with:
-        step: start
-        token: ${{ secrets.GITHUB_TOKEN }}
-        env: release
-
-    - name: update deployment status
-      uses: bobheadxi/deployments@v0.6.0
-      if: always()
-      with:
-        step: finish
-        token: ${{ secrets.GITHUB_TOKEN }}
-        status: ${{ job.status }}
-        deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+      - uses: chrnorm/deployment-action@releases/v1
+        name: Create GitHub deployment
+        id: deployment
+        with:
+          token: "${{ github.token }}"
+          target_url: http://my-app-url.com
+          environment: production
