--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,3 +25,4 @@ jobs:
           token: "${{ github.token }}"
           target_url: http://my-app-url.com
           environment: production
+          initial_status: in_progress
