--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,4 +25,12 @@ jobs:
           token: "${{ github.token }}"
           target_url: http://my-app-url.com
           environment: production
-          initial_status: in_progress
+
+      - name: Update deployment status (success)
+        if: success()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          token: "${{ github.token }}"
+          target_url: http://my-app-url.com
+          state: "in_progress"
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
