--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,19 +21,19 @@ jobs:
       - name: Run a one-line script
         run: echo $GITHUB_SHA
 
-      # - uses: chrnorm/deployment-action@releases/v1
-      #   name: Create GitHub deployment
-      #   id: deployment
-      #   with:
-      #     token: "${{ github.token }}"
-      #     target_url: http://my-app-url.com
-      #     environment: production
+      - uses: chrnorm/deployment-action@releases/v1
+        name: Create GitHub deployment
+        id: deployment
+        with:
+          token: "${{ github.token }}"
+          target_url: http://my-app-url.com
+          environment: production
 
-      # - name: Update deployment status (success)
-      #   if: success()
-      #   uses: chrnorm/deployment-status@releases/v1
-      #   with:
-      #     token: "${{ github.token }}"
-      #     target_url: http://my-app-url.com
-      #     state: "in_progress"
-      #     deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+      - name: Update deployment status (success)
+        if: success()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          token: "${{ github.token }}"
+          target_url: http://my-app-url.com
+          state: "in_progress"
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
