--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -6,6 +6,7 @@ name: Manual workflow
 # or API.
 on:
   workflow_dispatch:
+  push:
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
