--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -8,9 +8,6 @@ on:
   workflow_dispatch:
   push:
 
-env:
-  aaa: aho
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "greet"
@@ -20,22 +17,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
 
     steps:
-      - name: Run a one-line script
-        run: echo ${{ env.aaa }}
-
       - uses: chrnorm/deployment-action@releases/v1
         name: Create GitHub deployment
-        id: deployment
         with:
-          token: "${{ github.token }}"
+          token: ${{ secrets.DEPLOY_TOKEN }}
           target_url: http://my-app-url.com
           environment: production
-
-      - name: Update deployment status (success)
-        if: success()
-        uses: chrnorm/deployment-status@releases/v1
-        with:
-          token: "${{ github.token }}"
-          target_url: http://my-app-url.com
-          state: "in_progress"
-          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
