--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,6 +20,6 @@ jobs:
       - uses: chrnorm/deployment-action@releases/v1
         name: Create GitHub deployment
         with:
-          token: aaaa
+          token: ${{ secrets.DEPLOY_TOKEN }}
           target_url: http://my-app-url.com
           environment: production
